--- a/index.html
+++ b/index.html
@@ -5,14 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/main.css">
     <script src="./src/index.js" defer></script>
-    <title>Document</title>
+    <title>HomeStory</title>
 </head>
 <body>
-    <!-- ROOMS NAV -->
-    
-    <nav id="rooms-nav">
-
-    </nav>
 
 </body>
 </html>
