--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/main.css">
     <script src="./src/FetchClient.js" ></script>
+    <script src="./src/RoomCard.js"></script>
     <script src="./src/index.js" defer></script>
     <title>HomeStory</title>
 </head>
