--- a/index.html
+++ b/index.html
@@ -11,10 +11,21 @@
     <script src="./src/FetchClient.js" ></script>
     <script src="./src/FurnitureItem.js"></script>
     <script src="./src/RoomCard.js" defer></script>
+    <script src="./src/AppTitleComponent.js" ></script>
     <script src="./src/index.js" defer></script>
     <title>HomeStory</title>
 </head>
 <body>
+
+    <div id="title-title-div">
+    </div>
+
+    <div id="title-home-page-div">
+    </div>
+
+    <nav id="rooms-home-page-nav">
+    </nav>
+    
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous" defer></script>
 </body>
