--- a/index.html
+++ b/index.html
@@ -9,21 +9,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <script src="./src/FetchClient.js" ></script>
-    <script src="./src/FurnitureItem.js"></script>
-    <script src="./src/RoomCard.js" defer></script>
+    <script src="./src/FurnitureComponent.js"></script>
     <script src="./src/AppTitleComponent.js" ></script>
+    <script src="./src/RoomComponent.js" ></script>
     <script src="./src/index.js" defer></script>
     <title>HomeStory</title>
 </head>
 <body>
-
+    <!-- TITLE PAGE -->
     <div id="title-title-div">
     </div>
 
+    <!-- HOME PAGE -->
     <div id="title-home-page-div">
     </div>
 
+    <!-- ROOM PAGE -->
+    <div id="room-name-room-page">
+    </div>
     <nav id="rooms-home-page-nav">
+    </nav>
+
+    <nav id="rooms-room-page-nav">
     </nav>
     
     <!-- Bootstrap -->
