--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="./src/FurnitureComponent.js"></script>
     <script src="./src/AppTitleComponent.js" ></script>
     <script src="./src/RoomComponent.js" ></script>
+    <script src="./src/AddFurnitureFormComponent.js" ></script>
     <script src="./src/index.js" defer></script>
     <title>HomeStory</title>
 </head>
@@ -32,6 +33,19 @@
 
     <nav id="rooms-room-page-nav">
     </nav>
+
+    <div id="add-furniture-room-page-div">
+        <!-- button goes here -->
+    </div>
+
+    <div id="furniture-grid-div">
+        <!-- furniture items go here -->
+        <!-- <div>
+            content
+        </div> -->
+    </div>
+
+    <!-- ROOM PAGE FURNITURE SECTION -->
     
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous" defer></script>
