--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Handlee&family=Montserrat&display=swap" rel="stylesheet">
     <!-- animejs -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js" defer></script>
     <!-- Bootstrap -->
@@ -43,11 +43,13 @@
     </div>
 
     <br>
-    <br>
 
     <div id="add-furniture-room-page-div">
         <!-- button goes here -->
     </div>
+
+    <br>
+    <br>
 
     <div id="furniture-grid-div">
         <!-- furniture items go here -->
