matt latest styles

--- a/index.html
+++ b/index.html
@@ -23,24 +23,22 @@
 <body>
     <!-- TITLE PAGE -->
     <div id="title-title-div"></div>
+    <div id="title-img-holder"></div>
+    <div id="title-form-holder">
+    </div>
 
     <!-- HOME PAGE -->
-    <div id="title-home-page-div">
-    </div>
-
+    <div id="title-home-page-div"></div>
+    <nav id="rooms-home-page-nav"></nav>
+   
     <!-- ROOM PAGE -->
-  
-    <nav id="rooms-home-page-nav">
-    </nav>
 
-    <nav id="rooms-room-page-nav">
-    </nav>
+    <nav id="rooms-room-page-nav"></nav>
 
     <br>
     <br>
 
-    <div id="room-name-room-page">
-    </div>
+    <div id="room-name-room-page"></div>
 
     <br>
     <br>
@@ -48,8 +46,6 @@
     <div id="add-furniture-room-page-div">
         <!-- button goes here -->
     </div>
-
-    
 
     <div id="furniture-grid-div">
         <!-- furniture items go here -->
