--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
     <!-- TITLE PAGE -->
     <div id="title-title-div"></div>
     <div id="title-img-holder"></div>
-    <div id="title-form-holder">
-    </div>
+    <div id="title-username-holder"></div>
+    <div id="title-error-message"></div>
+    <div id="title-form-holder"></div>
+    <div id="title-logout-holder"></div>
 
     <!-- HOME PAGE -->
     <div id="title-home-page-div"></div>
+    <div id="home-username-holder"></div>
     <nav id="rooms-home-page-nav"></nav>
    
     <!-- ROOM PAGE -->
