finish create user feature with proper validations

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div id="title-img-holder"></div>
     <div id="title-username-holder"></div>
     <div id="title-error-message"></div>
+    <div id="title-signup-error-message"></div>
     <div id="title-form-holder"></div>
     <div id="title-logout-holder"></div>
 
